--- a/notebooks/AM_analyzeDataset.ipynb
+++ b/notebooks/AM_analyzeDataset.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -83,42 +83,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>quality</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>{'A': 0, 'B': 0, 'C': 0, 'D': 0, 'E': 0, 'F': 0}</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>Parus Major</td>\n",
+       "      <td>Parus major</td>\n",
        "      <td></td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -129,12 +129,12 @@
       ],
       "text/plain": [
        "                type country  \\\n",
-       "max      Parus Major           \n",
-       "mean     Parus Major           \n",
-       "median   Parus Major           \n",
-       "min      Parus Major           \n",
-       "quality  Parus Major           \n",
-       "total    Parus Major           \n",
+       "max      Parus major           \n",
+       "mean     Parus major           \n",
+       "median   Parus major           \n",
+       "min      Parus major           \n",
+       "quality  Parus major           \n",
+       "total    Parus major           \n",
        "\n",
        "                                          number of files  length  \n",
        "max                                                   NaN     0.0  \n",
@@ -145,7 +145,7 @@
        "total                                                   0     NaN  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,19 +153,19 @@
    "source": [
     "countries = ['Poland', 'Germany', 'Slovakia', 'Czech', 'Lithuania']\n",
     "\n",
-    "# initialize dictionary of a bird\n",
+    "# make and initialize dictionary of a bird\n",
     "bird = {\n",
-    "        'type':'Parus Major',\n",
+    "        'type':'Parus major',\n",
     "        'country':'',\n",
     "        'number of files': \n",
     "            {\n",
     "            'total' : 0,\n",
     "            'quality':{'A':0,\n",
     "                        'B':0,\n",
-    "                       'C':0,\n",
-    "                       'D':0,\n",
-    "                       'E':0,\n",
-    "                       'F':0,\n",
+    "                        'C':0,\n",
+    "                        'D':0,\n",
+    "                        'E':0,\n",
+    "                        'F':0,\n",
     "                      }\n",
     "            },\n",
     "        'length':{'min':0,\n",
@@ -180,18 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from folder ../data/xeno-canto-dataset/Parus Major cnt Poland type song\n",
-      "Loading data from folder ../data/xeno-canto-dataset/Parus Major cnt Germany type song\n",
-      "Loading data from folder ../data/xeno-canto-dataset/Parus Major cnt Slovakia type song\n",
-      "Loading data from folder ../data/xeno-canto-dataset/Parus Major cnt Czech type song\n",
-      "Loading data from folder ../data/xeno-canto-dataset/Parus Major cnt Lithuania type song\n"
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Poland type song\n",
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Germany type song\n",
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Slovakia type song\n",
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Czech type song\n",
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Lithuania type song\n"
      ]
     },
     {
@@ -224,46 +224,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>23.9076</td>\n",
+       "      <td>974.244375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0    13.825218\n",
-       "dtype: float64</td>\n",
+       "      <td>102.053273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0    10.9337\n",
-       "dtype: float64</td>\n",
+       "      <td>58.004725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6.9937</td>\n",
+       "      <td>3.325813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>quality</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
-       "      <td>{'A': 507, 'B': 435, 'C': 168, 'D': 138, 'E': ...</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
+       "      <td>{'A': 169, 'B': 145, 'C': 56, 'D': 46, 'E': 1,...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>Parus Major</td>\n",
-       "      <td>Poland Germany Slovakia Czech Lithuania Polan...</td>\n",
-       "      <td>1254</td>\n",
+       "      <td>Parus major</td>\n",
+       "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
+       "      <td>418</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -271,56 +269,59 @@
        "</div>"
       ],
       "text/plain": [
-       "                type                                            country  \\\n",
-       "max      Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
-       "mean     Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
-       "median   Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
-       "min      Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
-       "quality  Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
-       "total    Parus Major   Poland Germany Slovakia Czech Lithuania Polan...   \n",
+       "                type                                   country  \\\n",
+       "max      Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "mean     Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "median   Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "min      Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "quality  Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "total    Parus major   Poland Germany Slovakia Czech Lithuania   \n",
        "\n",
-       "                                           number of files  \\\n",
-       "max                                                    NaN   \n",
-       "mean                                                   NaN   \n",
-       "median                                                 NaN   \n",
-       "min                                                    NaN   \n",
-       "quality  {'A': 507, 'B': 435, 'C': 168, 'D': 138, 'E': ...   \n",
-       "total                                                 1254   \n",
-       "\n",
-       "                                length  \n",
-       "max                            23.9076  \n",
-       "mean     0    13.825218\n",
-       "dtype: float64  \n",
-       "median     0    10.9337\n",
-       "dtype: float64  \n",
-       "min                             6.9937  \n",
-       "quality                            NaN  \n",
-       "total                              NaN  "
+       "                                           number of files      length  \n",
+       "max                                                    NaN  974.244375  \n",
+       "mean                                                   NaN  102.053273  \n",
+       "median                                                 NaN   58.004725  \n",
+       "min                                                    NaN    3.325813  \n",
+       "quality  {'A': 169, 'B': 145, 'C': 56, 'D': 46, 'E': 1,...         NaN  \n",
+       "total                                                  418         NaN  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from mutagen.mp3 import MP3\n",
+    "from statistics import mean, median\n",
+    "\n",
     "lengthData = list()\n",
+    "audioLength = []\n",
     "for country in range(len(countries)):\n",
+    "        # find the driectory with recordings\n",
     "        bird['country']=bird['country']+' ' + countries[country]\n",
     "        path = '../data/xeno-canto-dataset/' + bird['type'] + ' cnt '+ countries[country] + ' type song'\n",
     "        print('Loading data from folder ' + path)\n",
+    "        \n",
+    "        # load info about the quality of the recording from json file\n",
     "        qualityData = read_data('q', path)\n",
     "        bird['number of files']['total']=bird['number of files']['total']+len(qualityData)\n",
     "        for quality in bird['number of files']['quality']:\n",
     "             bird['number of files']['quality'][quality]=bird['number of files']['quality'][quality]+qualityData.count(quality)\n",
     "        \n",
-    "        temp= pd.to_numeric(read_data('lng', path))\n",
-    "        lengthData = list(lengthData) + list(temp)\n",
+    "        # load MP3 file of every recording and check the length of a file\n",
+    "        idData = read_data('id', path)\n",
+    "        genData = read_data('gen', path)\n",
+    "        for audioFile in range(len(idData)):\n",
+    "            audioLength.append(MP3(path+'/'+genData[audioFile]+idData[audioFile]+'.mp3').info.length) \n",
+    "                        \n",
+    "        lengthData = list(audioLength) + list(lengthData)\n",
     "\n",
+    "      \n",
     "bird['length']['max']=max(lengthData)\n",
     "bird['length']['min']=min(lengthData)\n",
-    "bird['length']['mean']=pd.DataFrame(lengthData).mean() \n",
-    "bird['length']['median']=pd.DataFrame(lengthData).median()  \n",
+    "bird['length']['mean']=mean(lengthData) \n",
+    "bird['length']['median']=median(lengthData)  \n",
     "\n",
     "pd.DataFrame(bird)       \n"
    ]
