--- a/notebooks/AM_analyzeDataset.ipynb
+++ b/notebooks/AM_analyzeDataset.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>type</th>\n",
+       "      <th>gen</th>\n",
+       "      <th>spec</th>\n",
        "      <th>country</th>\n",
        "      <th>number of files</th>\n",
        "      <th>length</th>\n",
@@ -83,42 +84,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>quality</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>{'A': 0, 'B': 0, 'C': 0, 'D': 0, 'E': 0, 'F': 0}</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td></td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -128,13 +135,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                type country  \\\n",
-       "max      Parus major           \n",
-       "mean     Parus major           \n",
-       "median   Parus major           \n",
-       "min      Parus major           \n",
-       "quality  Parus major           \n",
-       "total    Parus major           \n",
+       "           gen   spec country  \\\n",
+       "max      Parus  major           \n",
+       "mean     Parus  major           \n",
+       "median   Parus  major           \n",
+       "min      Parus  major           \n",
+       "quality  Parus  major           \n",
+       "total    Parus  major           \n",
        "\n",
        "                                          number of files  length  \n",
        "max                                                   NaN     0.0  \n",
@@ -145,7 +152,7 @@
        "total                                                   0     NaN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +162,8 @@
     "\n",
     "# make and initialize dictionary of a bird\n",
     "bird = {\n",
-    "        'type':'Parus major',\n",
+    "        'gen':'Parus',\n",
+    "        'spec':'major',\n",
     "        'country':'',\n",
     "        'number of files': \n",
     "            {\n",
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +223,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>type</th>\n",
+       "      <th>gen</th>\n",
+       "      <th>spec</th>\n",
        "      <th>country</th>\n",
        "      <th>number of files</th>\n",
        "      <th>length</th>\n",
@@ -224,42 +233,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
        "      <td>974.244375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
        "      <td>102.053273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
        "      <td>58.004725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.325813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>quality</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>{'A': 169, 'B': 145, 'C': 56, 'D': 46, 'E': 1,...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>total</th>\n",
-       "      <td>Parus major</td>\n",
+       "      <td>Parus</td>\n",
+       "      <td>major</td>\n",
        "      <td>Poland Germany Slovakia Czech Lithuania</td>\n",
        "      <td>418</td>\n",
        "      <td>NaN</td>\n",
@@ -269,13 +284,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                type                                   country  \\\n",
-       "max      Parus major   Poland Germany Slovakia Czech Lithuania   \n",
-       "mean     Parus major   Poland Germany Slovakia Czech Lithuania   \n",
-       "median   Parus major   Poland Germany Slovakia Czech Lithuania   \n",
-       "min      Parus major   Poland Germany Slovakia Czech Lithuania   \n",
-       "quality  Parus major   Poland Germany Slovakia Czech Lithuania   \n",
-       "total    Parus major   Poland Germany Slovakia Czech Lithuania   \n",
+       "           gen   spec                                   country  \\\n",
+       "max      Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
+       "mean     Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
+       "median   Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
+       "min      Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
+       "quality  Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
+       "total    Parus  major   Poland Germany Slovakia Czech Lithuania   \n",
        "\n",
        "                                           number of files      length  \n",
        "max                                                    NaN  974.244375  \n",
@@ -286,7 +301,7 @@
        "total                                                  418         NaN  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +315,7 @@
     "for country in range(len(countries)):\n",
     "        # find the driectory with recordings\n",
     "        bird['country']=bird['country']+' ' + countries[country]\n",
-    "        path = '../data/xeno-canto-dataset/' + bird['type'] + ' cnt '+ countries[country] + ' type song'\n",
+    "        path = '../data/xeno-canto-dataset/' + bird['gen'] + ' '+bird['spec'] +' cnt '+ countries[country] + ' type song'\n",
     "        print('Loading data from folder ' + path)\n",
     "        \n",
     "        # load info about the quality of the recording from json file\n",
@@ -311,9 +326,8 @@
     "        \n",
     "        # load MP3 file of every recording and check the length of a file\n",
     "        idData = read_data('id', path)\n",
-    "        genData = read_data('gen', path)\n",
     "        for audioFile in range(len(idData)):\n",
-    "            audioLength.append(MP3(path+'/'+genData[audioFile]+idData[audioFile]+'.mp3').info.length) \n",
+    "            audioLength.append(MP3(path+'/'+bird['gen']+idData[audioFile]+'.mp3').info.length) \n",
     "                        \n",
     "        lengthData = list(audioLength) + list(lengthData)\n",
     "\n",
@@ -328,17 +342,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from folder ../data/xeno-canto-dataset/Parus major cnt Poland type song\n",
+      "Selected random files number: [10, 128, 109, 16, 65]\n",
+      "../data/xeno-canto-dataset/Parus major cnt Poland type song/Parus405034.mp3\n",
+      "../data/xeno-canto-dataset/Parus major cnt Poland type song/Parus123087.mp3\n",
+      "../data/xeno-canto-dataset/Parus major cnt Poland type song/Parus305080.mp3\n",
+      "../data/xeno-canto-dataset/Parus major cnt Poland type song/Parus348076.mp3\n",
+      "../data/xeno-canto-dataset/Parus major cnt Poland type song/Parus122470.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import sample\n",
+    "\n",
+    "# find the driectory with recordings\n",
+    "path = '../data/xeno-canto-dataset/' + bird['gen'] + ' '+bird['spec'] + ' cnt '+ 'Poland' + ' type song'\n",
+    "print('Loading data from folder ' + path)\n",
+    "\n",
+    "# load json file:  read all id numbers\n",
+    "idData = read_data('id', path)\n",
+    "\n",
+    "# select random 5 recordings from Poland\n",
+    "randFiles = random.sample(range(len(idData)), 5)\n",
+    "print('Selected random files number:',randFiles)\n",
+    "\n",
+    "\n",
+    "for audioFile in randFiles:\n",
+    "    # path of random file\n",
+    "    filePath = path+'/'+genData[audioFile]+idData[audioFile]+'.mp3'\n",
+    "    print(filePath)\n",
+    "    \n",
+    "    # plot recording signal\n",
+    "    # ...\n",
+    "    \n",
+    "    # plot spectogram\n",
+    "    # ...\n",
+    "    \n",
+    "    # plot mel-spectogram\n",
+    "    # ..."
+   ]
   }
  ],
  "metadata": {
