--- a/notebooks/AM_analyzeDataset.ipynb
+++ b/notebooks/AM_analyzeDataset.ipynb
@@ -131,6 +131,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## General statistics summary\n",
+    "To summarize the statistics we plot:\n",
+    "* Plot - length of recordings with the line of a median and average length\n",
+    "* Histogram - to plot histogram we will find number of bins auntomaticially. The selected method is ‘fd’ (Freedman Diaconis Estimator) - Robust (resilient to outliers) estimator that takes into account data variability and data size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('The recording length [s]')\n",
+    "plt.plot(lengthData)\n",
+    "plt.axhline(y=bird['length']['median']+20, color='r', linestyle='-') # plot the line at a median\n",
+    "plt.axhline(y=bird['length']['mean'], color='y', linestyle='-') # plot the line at a mean\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('Histogram of recordings length [s]')\n",
+    "plt.hist(lengthData, bins  = 'fd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Randomly test few recordings\n",
     "In this section we randomly select a few (for exampke 3) recordings from a dataset and listen to it. Then we plot wavegrams, spectograms and melgrams."
    ]
@@ -152,7 +181,7 @@
     "qualityData = read_data('q',path)\n",
     "\n",
     "# select random 5 recordings from Poland\n",
-    "randFiles = sample(range(len(idData)), 1)\n",
+    "randFiles = sample(range(len(idData)), 3)\n",
     "print('Selected random files number:',randFiles)"
    ]
   },
@@ -178,7 +207,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import librosa\n",
     "import librosa.display\n",
     "import numpy as np\n",
@@ -189,7 +217,7 @@
     "    filePath = path+'/'+bird['gen']+idData[audioFile]+'.mp3'\n",
     "\n",
     "    # plot recording signal\n",
-    "    y, sr = librosa.load(filePath,duration=30)\n",
+    "    y, sr = librosa.load(filePath,duration=15)\n",
     "    plt.figure(figsize=(10, 4))\n",
     "    librosa.display.waveplot(y, sr=sr)\n",
     "    plt.title('Monophonic - file number '+str(audioFile))\n",
@@ -245,26 +273,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import noisereduce as nr\n",
     "for audioFile in randFiles:\n",
     "    # path of random file\n",
     "    filePath = path+'/'+bird['gen']+idData[audioFile]+'.mp3'\n",
-    "    print('Play the file number '+ str(audioFile)+', quality: '+ qualityData[audioFile])\n",
+    "    print('Before denoising: File number '+ str(audioFile)+', quality: '+ qualityData[audioFile])\n",
     "    # show the recording and allow to play it\n",
     "    ipd.display(ipd.Audio(filePath))\n",
-    "    # perform noise reduction\n",
-    "    data, r = librosa.load(filePath,duration=30)\n",
-    "    print(len(data))\n",
-    "    reduced_noise = nr.reduce_noise(audio_clip=data, noise_clip=data, verbose=True)\n",
+    "    \n",
+    "    # load a file again\n",
+    "    data, r = librosa.load(filePath,duration=15)\n",
+    "    \n",
+    "    # plot mel-spectogram before denosing\n",
+    "    S = librosa.feature.melspectrogram(y=data, sr=sr, n_mels=128,fmax=8000)\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    librosa.display.specshow(librosa.power_to_db(S,ref=np.max),\n",
+    "                          y_axis='mel', fmax=8000,x_axis='time')\n",
+    "    plt.colorbar(format='%+2.0f dB')\n",
+    "    plt.title('Mel spectrogram - file number '+str(audioFile))\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()    \n",
+    "    \n",
+    "    # reduce noise\n",
+    "    reduced_noise = nr.reduce_noise(audio_clip=data, noise_clip=data, prop_decrease = 1, verbose=False)\n",
+    "    \n",
+    "    # plot mel-spectogram after denosing\n",
+    "    print(\"After denoising\")\n",
     "    ipd.display(ipd.Audio(reduced_noise,rate=r))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    S = librosa.feature.melspectrogram(y=reduced_noise, sr=sr, n_mels=128,fmax=8000)\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    librosa.display.specshow(librosa.power_to_db(S,ref=np.max),\n",
+    "                          y_axis='mel', fmax=8000,x_axis='time')\n",
+    "    plt.colorbar(format='%+2.0f dB')\n",
+    "    plt.title('Mel spectrogram - file number '+str(audioFile))\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lengthData = list()\n",
+    "snr = []\n",
+    "for country in range(len(countries)):\n",
+    "        # find the driectory with recordings\n",
+    "        bird['country']=bird['country']+' ' + countries[country]\n",
+    "        path = '../data/xeno-canto-dataset/' + bird['gen'] + ' '+bird['spec'] +' cnt '+ countries[country] + ' type song'\n",
+    "        print('Loading data from folder ' + path)\n",
+    "        \n",
+    "        idData = read_data('id', path)\n",
+    "        for audioFile in range(len(idData)):\n",
+    "            print('Processing a file number '+audioFile)\n",
+    "            data, r = librosa.load(path+'/'+bird['gen']+idData[audioFile]+'.mp3',duration=15)\n",
+    "            reduced_noise = nr.reduce_noise(audio_clip=data, noise_clip=data, prop_decrease = 1, verbose=False)\n",
+    "            signal2noise=reduced_noise/(data-reduced_noise)\n",
+    "            snr.append(median(signal2noise))\n",
+    "\n",
+    "                        \n",
+    "plt.plot(snr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
