--- a/notebooks/AM_analyzeDataset.ipynb
+++ b/notebooks/AM_analyzeDataset.ipynb
@@ -131,35 +131,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General statistics summary\n",
-    "To summarize the statistics we plot:\n",
-    "* Plot - length of recordings with the line of a median and average length\n",
-    "* Histogram - to plot histogram we will find number of bins auntomaticially. The selected method is ‘fd’ (Freedman Diaconis Estimator) - Robust (resilient to outliers) estimator that takes into account data variability and data size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(10, 4))\n",
-    "plt.title('The recording length [s]')\n",
-    "plt.plot(lengthData)\n",
-    "plt.axhline(y=bird['length']['median']+20, color='r', linestyle='-') # plot the line at a median\n",
-    "plt.axhline(y=bird['length']['mean'], color='y', linestyle='-') # plot the line at a mean\n",
-    "\n",
-    "plt.figure(figsize=(10, 4))\n",
-    "plt.title('Histogram of recordings length [s]')\n",
-    "plt.hist(lengthData, bins  = 'fd')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Randomly test few recordings\n",
     "In this section we randomly select a few (for exampke 3) recordings from a dataset and listen to it. Then we plot wavegrams, spectograms and melgrams."
    ]
@@ -207,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import librosa\n",
     "import librosa.display\n",
     "import numpy as np\n",
@@ -217,7 +189,7 @@
     "    filePath = path+'/'+bird['gen']+idData[audioFile]+'.mp3'\n",
     "\n",
     "    # plot recording signal\n",
-    "    y, sr = librosa.load(filePath,duration=15)\n",
+    "    y, sr = librosa.load(filePath,duration=10)\n",
     "    plt.figure(figsize=(10, 4))\n",
     "    librosa.display.waveplot(y, sr=sr)\n",
     "    plt.title('Monophonic - file number '+str(audioFile))\n",
@@ -243,7 +215,7 @@
     "    filePath = path+'/'+bird['gen']+idData[audioFile]+'.mp3'\n",
     "\n",
     "    # loading files again\n",
-    "    y, sr = librosa.load(filePath,duration=30)\n",
+    "    y, sr = librosa.load(filePath,duration=10)\n",
     "\n",
     "    # plot mel-spectogram\n",
     "    # Passing through arguments to the Mel filters\n",
@@ -287,7 +259,7 @@
     "    ipd.display(ipd.Audio(filePath))\n",
     "    \n",
     "    # load a file again\n",
-    "    data, r = librosa.load(filePath,duration=15)\n",
+    "    data, r = librosa.load(filePath,duration=10)\n",
     "    \n",
     "    # plot mel-spectogram before denosing\n",
     "    S = librosa.feature.melspectrogram(y=data, sr=sr, n_mels=128,fmax=8000)\n",
@@ -316,29 +288,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General statistics summary\n",
+    "To summarize the statistics we plot:\n",
+    "* Plot - length of recordings with the line of a median and average length\n",
+    "* Histogram - to plot histogram we will find number of bins auntomaticially. The selected method is ‘fd’ (Freedman Diaconis Estimator) - Robust (resilient to outliers) estimator that takes into account data variability and data size"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lengthData = list()\n",
-    "snr = []\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('The recording length [s]')\n",
+    "plt.plot(lengthData)\n",
+    "plt.axhline(y=bird['length']['median']+20, color='r', linestyle='-') # plot the line at a median\n",
+    "plt.axhline(y=bird['length']['mean'], color='y', linestyle='-') # plot the line at a mean\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('Histogram of recordings length [s]')\n",
+    "plt.hist(lengthData, bins  = 'fd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from tqdm import tqdm\n",
+    "from time import sleep\n",
+    "\n",
+    "snr = list()\n",
     "for country in range(len(countries)):\n",
     "        # find the driectory with recordings\n",
     "        bird['country']=bird['country']+' ' + countries[country]\n",
     "        path = '../data/xeno-canto-dataset/' + bird['gen'] + ' '+bird['spec'] +' cnt '+ countries[country] + ' type song'\n",
     "        print('Loading data from folder ' + path)\n",
-    "        \n",
-    "        idData = read_data('id', path)\n",
-    "        for audioFile in range(len(idData)):\n",
-    "            print('Processing a file number '+audioFile)\n",
-    "            data, r = librosa.load(path+'/'+bird['gen']+idData[audioFile]+'.mp3',duration=15)\n",
-    "            reduced_noise = nr.reduce_noise(audio_clip=data, noise_clip=data, prop_decrease = 1, verbose=False)\n",
-    "            signal2noise=reduced_noise/(data-reduced_noise)\n",
-    "            snr.append(median(signal2noise))\n",
     "\n",
-    "                        \n",
-    "plt.plot(snr)"
+    "        idData = read_data('id', path)\n",
+    "        with tqdm(total=len(idData), file=sys.stdout) as pbar:\n",
+    "            for audioFile in range(len(idData)):\n",
+    "                pbar.set_description('Loading data from folder %d' %audioFile)\n",
+    "                pbar.update(1)\n",
+    "                data, r = librosa.load(path+'/'+bird['gen']+idData[audioFile]+'.mp3',duration=10)\n",
+    "                reduced_noise = nr.reduce_noise(audio_clip=data, noise_clip=data, prop_decrease = 1, verbose=False)\n",
+    "                signal2noise=reduced_noise/(data-reduced_noise)\n",
+    "                snr.append(median(signal2noise))\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('Signal to noise ratio for each file')\n",
+    "plt.plot(snr)\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.title('Histogram: signal to noise ratio for each file')\n",
+    "plt.hist(snr, bins  = 'fd')"
    ]
   },
   {
