--- a/notebooks/AM_analyzeDataset.ipynb
+++ b/notebooks/AM_analyzeDataset.ipynb
@@ -30,7 +30,7 @@
     "- [x] Number of sounds with specified quality (e.g. none - 460, A- 102 recordings, B - 230 recordigns, ...).\n",
     "\n",
     "Next, it analyze the recordings and:\n",
-    "- [ ] Calculate the signal to noise ratio -> return min, max and average values, \n",
+    "- [x] Calculate the signal to noise ratio -> display a summary plot for all recordings, \n",
     "- [x] Shows 3 random bird-songs spectograms, melgrams and sound waves, \n",
     "- [x] Test denoising of 3 random recordings.\n",
     "\n"
@@ -98,8 +98,8 @@
     "from mutagen.mp3 import MP3\n",
     "from statistics import mean, median\n",
     "\n",
-    "lengthData = list()\n",
-    "audioLength = []\n",
+    "audioLengths = list()\n",
+    "audioLengthTemp = []\n",
     "for country in range(len(countries)):\n",
     "        # find the driectory with recordings\n",
     "        bird['country']=bird['country']+' ' + countries[country]\n",
@@ -115,14 +115,14 @@
     "        # load MP3 file of every recording and check the length of a file\n",
     "        idData = read_data('id', path)\n",
     "        for audioFile in range(len(idData)):\n",
-    "            audioLength.append(MP3(path+'/'+bird['gen']+idData[audioFile]+'.mp3').info.length) \n",
+    "            audioLengthTemp.append(MP3(path+'/'+bird['gen']+idData[audioFile]+'.mp3').info.length) \n",
     "                        \n",
-    "        lengthData = list(audioLength) + list(lengthData)\n",
+    "        audioLengths = list(audioLengthTemp) + list(audioLengths)\n",
     "\n",
-    "bird['length']['max']=max(lengthData)\n",
-    "bird['length']['min']=min(lengthData)\n",
-    "bird['length']['mean']=mean(lengthData) \n",
-    "bird['length']['median']=median(lengthData)  \n",
+    "bird['length']['max']=max(audioLengths)\n",
+    "bird['length']['min']=min(audioLengths)\n",
+    "bird['length']['mean']=mean(audioLengths) \n",
+    "bird['length']['median']=median(audioLengths)  \n",
     "\n",
     "pd.DataFrame(bird)       \n"
    ]
@@ -305,13 +305,13 @@
    "source": [
     "plt.figure(figsize=(10, 4))\n",
     "plt.title('The recording length [s]')\n",
-    "plt.plot(lengthData)\n",
+    "plt.plot(audioLengths)\n",
     "plt.axhline(y=bird['length']['median']+20, color='r', linestyle='-') # plot the line at a median\n",
     "plt.axhline(y=bird['length']['mean'], color='y', linestyle='-') # plot the line at a mean\n",
     "\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.title('Histogram of recordings length [s]')\n",
-    "plt.hist(lengthData, bins  = 'fd')"
+    "plt.hist(audioLengths, bins  = 'fd')"
    ]
   },
   {
@@ -349,20 +349,6 @@
     "plt.title('Histogram: signal to noise ratio for each file')\n",
     "plt.hist(snr, bins  = 'fd')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
